--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
         aws-region: us-east-1
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync . s3://demo-testing-website-8864 --delete
+      run: aws s3 sync . s3://www.avi-learning.xyz --delete
